# CPP_Babel

./: CMakeLists.txt  conanfile.txt  launch.sh
audio/include/: AudioManager.hpp  IEncoder.hpp  ISoundHand.hpp  MainManager.hpp  Opus.hpp  Sound.hpp  SoundIn.hpp  SoundOut.hpp
audio/src/: AudioManager.cpp  MainManager.cpp  Opus.cpp  SoundIn.cpp  SoundOut.cpp
client/include/: udp_client.hpp  udp_socket.hpp
client/src/: main.cpp  udp_client.cpp  udp_socket.cpp
server/include/: client.hpp  udp_server.hpp  udp_socket.hpp
server/src/: client.cpp  main.cpp  udp_server.cpp  udp_socket.cpp
